@@ -1,0 +1,51 @@
+[interface]
+classification = assembly
+
+[parameters]
+;;Location of velvet
+$;VELVET_PATH$; = $;VELVET_INSTALL_DIR$;
+$;FILE_FORMAT$; = [-fasta|-fastq|-fasta.gz|-fastq.gz|-eland|-gerald]
+$;READ_TYPE$; = [-short|-shortPaired|-short2|-shortPaired2|-long|-longPaired]
+$;START_HASH_LENGTH$; = 17
+$;END_HASH_LENGTH$; = 23
+$;OTHER_OPTIMISER_OPTS$; = -a yes
+
+[input]
+;;If using paired end, use shuffleSequences_fastq/a.pl to combine 
+;;pairs into single file. If using multiple files
+$;INPUT_FILE$; = 
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+;;$;SEQUENCE_OUTPUT_LIST$;=$;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.sequences.list
+;;$;ROADMAP_OUTPUT_LIST$;=$;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.roadmaps.list
+;;$;CONTIG_OUTPUT_LIST$;=$;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.fa.list
+;;$;STATS_OUTPUT_LIST$;=$;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.stats.list
+;;$;GRAPH_OUTPUT_LIST$;=$;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.graph.list
+;;$;AMOS_OUTPUT_LIST$;=$;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.afg.list
+
+[component]
+$;COMPONENT_NAME$; = velvet_optimiser
+$;DESCRIPTION$; = none
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = $Name$
+$;RELEASE_TAG$; = $Name$
+$;REVISION$; = $Revision: 5801 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+
+;Distributed options
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; =
+$;COMPONENT_XML$; =
+$;PIPELINE_XML$; =
+$;PIPELINEID$; =
+
+[include]
+$;PROJECT_CONFIG$;=
