@@ -1,0 +1,66 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+        <state>incomplete</state>
+        <name>velvet workflow</name>
+        <!--Preprocessing-->
+		<command>
+			<type>RunUnixCommand</type>
+			<name>create output directory</name>
+			<state>incomplete</state>
+			<executable>mkdir</executable>
+			<arg>-p -m 777 $;OUTPUT_DIRECTORY$;</arg>
+		</command>
+		<command>
+			<type>RunUnixCommand</type>
+			<name>create temp directory</name>
+			<state>incomplete</state>
+			<executable>mkdir</executable>
+    	    <arg>-p -m 777 $;TMP_DIR$;</arg>
+		</command>
+        <!--Processing-->
+		<command>
+			<type>RunUnixCommand</type>
+			<name>create temp directory</name>
+			<state>incomplete</state>
+			<executable>$;BIN_DIR$;/run_velvet_optimiser.pl</executable>
+            <param>
+               <key>--input_file</key>
+               <value>$;INPUT_FILE$;</value>
+            </param>
+            <param>
+               <key>--output_directory</key>
+               <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+               <key>--log</key>
+               <value>$;OUTPUT_DIRECTORY$;/run_velvet_optimser.log</value>
+            </param>
+            <param>
+               <key>--velvet_path</key>
+               <value>$;VELVET_PATH$;</value>
+            </param>
+            <param>
+               <key>--file_format</key>
+               <value>$;FILE_FORMAT$;</value>
+            </param>
+            <param>
+               <key>--read_type</key>
+               <value>$;READ_TYPE$;</value>
+            </param>
+            <param>
+               <key>--start_hash_length</key>
+               <value>$;START_HASH_LENGTH$;</value>
+            </param>
+            <param>
+               <key>--end_hash_length</key>
+               <value>$;END_HASH_LENGTH$;</value>
+            </param>
+            <param>
+               <key>--other_optimiser_opts</key>
+               <value>&apos;$;OTHER_OPTIMISER_OPTS$;&apos;</value>
+            </param>
+		</command>
+	</commandSet>
+</commandSetRoot>
