@@ -1,5 +1,6 @@
 next
 ----
+-velvet_optimser: new component
 -celera2hawkeye: new component
 -celera_assembler_cloud: updated to fix bug where stderr was being written to a non-existant folder
 -amoscmp: new component
